# rock-paper-scissor-game

./: .gitignore  README.md  pyproject.toml
app/: game_manager.py  main.py  models.py  routes.py
app/static/: script.js  styles.css
templates/: index.html
