[tool.poetry]
name = "rock-paper-scissors"
version = "0.1.0"
description = "A simple rock-paper-scissors game using FastAPI and basic HTML/CSS"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
jinja2 = "^3.1.4"
python-multipart = "^0.0.12"

[tool.poetry.dev-dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
